# ai-blog-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  start_backend.bat  tsconfig.json
docs/: PRD-v2.md
services/agent-api/: Dockerfile  README.md  pyproject.toml  run.py
services/agent-api/src/agent_api/: config.py  runtime.py
services/agent-api/src/agent_api/api/: bootstrap.py  main.py  models.py  security.py  server.py
services/agent-api/src/agent_api/application/: __init__.py  channels.py  tasks.py
services/agent-api/src/agent_api/domain/: __init__.py  errors.py  models.py
services/agent-api/tests/: test_api.py  test_channel_command_idempotency.py  test_channel_workflow.py  test_checkpoint_config.py  test_clerk_security.py  test_config.py  test_diffing.py  test_domain_state.py  test_evaluation.py  test_logged_provider.py  test_master_reviewer.py  test_postgres_recovery.py  test_server.py  test_task_service_idempotency.py  test_workflow_interrupts.py  test_workflow_routing.py  test_zhipu_integration.py
services/brand-tools-mcp/: Dockerfile  README.md  pyproject.toml
services/brand-tools-mcp/src/brand_tools_mcp/: __init__.py  config.py  contracts.py  default_specs.py  exports.py  repository.py  security.py  server.py  tools.py
services/brand-tools-mcp/tests/: conftest.py  test_agent_client_transport.py  test_default_specs.py  test_exports.py  test_security.py  test_transport_contract.py  test_workflow_mcp_postgres.py
(+78 files in other folders)
