[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "brandflow-agent-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "langgraph>=0.6,<2",
  "langgraph-checkpoint-postgres>=2,<4",
  "mcp>=1.9,<2",
  "psycopg[binary,pool]>=3.2,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "PyJWT[crypto]>=2.10,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
